one case of usage transformPrimaryValuesToSecondary method added